--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import "tailwindcss";
+
+
+@custom-variant dark (&:where(.dark, .dark *));  
+
+@theme {
+  --font-roboto: "Inter", sans-serif; 
+  --font-display: "Pacifico", cursive; 
+  --color-purple-default: #1551ff;
+  --color-dark-default: #252525;
+  --color-dark-contrast: #171717;
+  --color-warning-red: #f23235;
+  --color-success-green: #71f67d;
+}
+
+@layer utilities {
+  /* Chrome, Safari, and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* IE, Edge, and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
